# api-load-gen

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  data_provider.py  dummy.csv  dummy_data.csv  entrypoint.sh  gen.py  gen_test_data.py  go.mod  go.sum  locustfile.py  prometheus_exporter.py  pyproject.toml  requirements-dev.txt  requirements.txt  skaffold.yaml  stages.csv  worker.go
.github/workflows/: build.yaml
k8s/base/: deployment.yaml  servicemonitor.yaml
misc/grafana/: accounts_openapi.json
misc/minikube/: README.md  grafana.yaml  info.sh  init.sh  kustomization.yaml
misc/minikube/appstack/base/: grafana.yaml  kustomization.yaml  prometheus.yaml
misc/minikube/appstack/envs/gcpkube/: kustomization.yaml
misc/minikube/appstack/envs/k3s/: kustomization.yaml  service.yaml
misc/minikube/appstack/envs/minikube/: kustomization.yaml  service.yaml
misc/minikube/instance/: grafana.yaml  kustomization.yaml  prometheus.yaml
misc/oracle/: REAMDE.md  deployment.yaml
misc/postgres/: README.md  values.yaml
misc/prometheus-stack/: README.md  info.sh  init.sh
misc/prometheus-stack/instance/base/: kustomization.yaml
misc/prometheus-stack/instance/envs/gcpkube/: kustomization.yaml
misc/prometheus-stack/instance/envs/minikube/: kustomization.yaml
misc/prometheus-stack/operator/: kustomization.yaml
