[tool.poetry]
name = "api-load-gen"
version = "0.1.0"
description = ""
authors = ["Li Lin <guru.lin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.1"
locust = "^1.5.3"
prometheus-client = "^0.11.0"
six = "^1.16.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.poetry.dev-dependencies]
black = "20.8b1"
flake8 = "^3.8.4"
pre-commit = "^2.8.2"
isort = "^5.6.4"
autoflake = "^1.4"
flake8-isort = "^4.0.0"
numpy = "^1.20.3"
matplotlib = "^3.4.2"
PyQt5 = "^5.15.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
